# vcard4

./: .gitignore  Cargo.toml  Makefile.toml  README.md  coverage_grcov.makefile.toml
.github/workflows/: audit.yaml  library.yaml
examples/: decoding_encoding.rs  iterator.rs  rfc_author.rs  serde.rs  vcard.rs
fixtures/: photo.vcf
src/: builder.rs  date_time.rs  error.rs  helper.rs  iter.rs  lib.rs  name.rs  parameter.rs  parameters.rs  parser.rs  property.rs  serde.rs  types.rs  uri.rs  values.rs  vcard.rs
tests/: all_fixtures.rs  calendar.rs  communications.rs  delivery.rs  delivery_addressing.rs  errors.rs  escaping.rs  explanatory.rs  extensions.rs  fold.rs  general.rs  geographic.rs  group.rs  identification.rs  iter.rs  loose.rs  organizational.rs  parameters.rs  parser.rs  security.rs  test_helpers.rs  types.proptest-regressions  types.rs  unicode_fold_line.rs  validate.rs  version_3.rs
