[package]
name = "vcard4"
version = "0.6.0"
edition = "2021"
description = "Fast and correct vCard parser for RFC6350"
repository = "https://github.com/tmpfs/vcard4"
keywords = ["vcard", "contact", "parser", "rfc6350"]
license = "MIT OR Apache-2.0"

[dependencies]
thiserror = "1"
logos = { version = "0.14", features = ["export_derive"] }
uriparse = "0.6.4"
time = { version = "0.3.37", features = ["parsing", "formatting"] }
unicode-segmentation="1"
aho-corasick = "0.7"
serde = { version = "1", features = ["derive"], optional = true }
zeroize = { version = "1.5", features = ["derive"], optional = true }
mime = { version = "0.3", optional = true }
language-tags = { version = "0.3", optional = true }
base64 = "0.21.0"

[features]
default = ["zeroize"]
serde = [
  "dep:serde",
  "time/serde-human-readable",
  "language-tags?/serde",
  "uriparse/serde",
]
zeroize = ["dep:zeroize"]
mime = ["dep:mime"]
language-tags = ["dep:language-tags"]

[dev-dependencies]
anyhow = "1"
serde_json = "1"
proptest = "1"
