[package]
name = "vcard4"
version = "0.6.2"
edition = "2021"
description = "Fast and correct vCard parser for RFC6350"
repository = "https://github.com/tmpfs/vcard4"
keywords = ["vcard", "contact", "parser", "rfc6350"]
license = "MIT OR Apache-2.0"

[dependencies]
thiserror = "2"
logos = { version = "0.15", features = ["export_derive"] }
uriparse = "0.6"
time = { version = "0.3.37", features = ["parsing", "formatting"] }
unicode-segmentation="1"
aho-corasick = "1"
base64 = "0.22.0"
serde = { version = "1", features = ["derive"], optional = true }
serde_with = { version = "3", optional = true }
cfg_eval = { version = "0.1", optional = true }
zeroize = { version = "1.5", features = ["derive"], optional = true }
mime = { version = "0.3", optional = true }
language-tags = { version = "0.3", optional = true }

[features]
default = ["zeroize"]
serde = [
  "dep:serde",
  "dep:serde_with",
  "dep:cfg_eval",
  "time/serde-human-readable",
  "language-tags?/serde",
]
zeroize = ["dep:zeroize"]
mime = ["dep:mime"]
language-tags = ["dep:language-tags"]

[dev-dependencies]
anyhow = "1"
serde_json = "1"
proptest = "1"
